# androidopencv

androidopencl/app/: build.gradle
androidopencl/app/src/main/: AndroidManifest.xml
androidopencl/app/src/main/cpp/: CMakeLists.txt  ImageSobelFilter.cpp
androidopencl/gradle/wrapper/: gradle-wrapper.properties
cvsamples/: settings.gradle
cvsamples/app/: build.gradle
cvsamples/camera-calibration/: build.gradle
cvsamples/camera-calibration/src/main/: AndroidManifest.xml
cvsamples/cameracontrol/: build.gradle
cvsamples/cameracontrol/src/main/: AndroidManifest.xml
cvsamples/cameracontrol/src/main/res/values/: strings.xml
cvsamples/camerapreview/: build.gradle
cvsamples/camerapreview/src/main/: AndroidManifest.xml
cvsamples/color-blob-detection/: build.gradle
cvsamples/color-blob-detection/src/main/: AndroidManifest.xml
cvsamples/face-detection/: build.gradle
cvsamples/face-detection/src/main/: AndroidManifest.xml
cvsamples/face-detection/src/main/cpp/: CMakeLists.txt
cvsamples/image-manipulations/: build.gradle
cvsamples/image-manipulations/src/main/: AndroidManifest.xml
cvsamples/mixedprocessing/: build.gradle
cvsamples/mixedprocessing/src/main/: AndroidManifest.xml
cvsamples/mixedprocessing/src/main/cpp/: CMakeLists.txt
cvsamples/mixedprocessing/src/main/res/values/: strings.xml
cvsamples/puzzle/: build.gradle
cvsamples/puzzle/src/main/: AndroidManifest.xml
cvsamples/sdk/: build.gradle
cvsamples/sdk/src/main/: AndroidManifest.xml
cvsamples/sdk/src/main/cpp/: CMakeLists.txt
(+19 files in other folders)
